# CET

./: .cursorrules  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  AGENTS.md  AUDIT_REPAIR_PLAN.md  CET.code-workspace  COMPREHENSIVE_AUDIT_REPORT.md  CORE_LOGIC_ANALYSIS_REPORT.md  DEVELOPMENT_QUICKSTART.md  Dockerfile  Dockerfile.frontend  FRONTEND_COMPREHENSIVE_AUDIT_REPORT.md  GITHUB_SETUP_COMPLETE.md  GITHUB_SETUP_MANUAL.md  IDE_MYPY_CONFIG.md  LICENSE  PYRIGHT_DISABLE.md  README.md  REMAINING_HIGH_PRIORITY_FIXES.md  REPAIR_PLAN.md  TESTING_STRATEGY.md  TESTING_SUMMARY.md  TODO_IMPLEMENTATION_PLAN.md  alembic.ini  api-validation-report.md  api_endpoints.txt  api_health_report.json  claude.md  current_openapi.json  debug_test.py  deploy.sh  docker-compose.prod.yml  docker-compose.yml  openapi.json  package-lock.json  (+16 more)
.cursor/: ai-agent-core-context.md  cursor-specs-usage-guide.md  cursor-usage-guide.md  quick-reference.md  rules-ai-extended.md  rules-ai.md  rules-core.md  rules-education-extended.md  rules-education.md  rules-performance-extended.md  rules-performance.md  rules-security-backup.md  rules-security.md  specs-core-navigator.md  specs-verification-report.md
.doc/: 3-管理员功能说明.md  4-教师功能说明.md  5-学生功能说明.md  AI专家智能体提示词.md  PM.md  prd  全栈工程师智能体提示词.md  英语四级教师智能体提示词.md  项目符合性检查提示词.md
.doc/审查报告/: 英语四级智能训练系统全面技术架构审查报告.md  英语四级智能训练系统深度符合性审查报告.md
.doc/教学大纲/: README.md  ai-agent-deviation-prevention.md  character-limit-solution.md  comprehensive-teaching-system-optimization.md  comprehensive-teaching-system-roadmap.md  deepseek-implementation-examples.md  deepseek-optimization-strategy.md  deepseek-optimization-summary.md  deepseek-optimizer-ai-development-tasks.md  deepseek-optimizer-code-generation-examples.md  deepseek-optimizer-module-development-plan.md  development-rules-and-constraints.md  document-loading-rules.md  final-task-review-report.md  project-implementation-guide.md  simplified-task-template.md  task-list-summary.md  task-technical-specifications.md  teaching-syllabus-api-design.md  teaching-syllabus-architecture-improvement.md  teaching-syllabus-data-models.md  teaching-syllabus-implementation-plan.md  teaching-syllabus-system-analysis.md  teaching-syllabus-technical-implementation.md
.doc/项目优化/: 01-技术架构优化指南.md  02-性能优化实施方案.md  03-代码质量提升计划.md  04-安全性增强方案.md  05-系统监控优化方案.md  06-部署运维优化方案.md  07-团队协作优化方案.md  README.md
.github/: CODEOWNERS  IDE_ISSUES.md  README.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: code-quality.md
.github/scripts/: deploy.sh  quality-report.py  test.sh
.github/workflows/: cd.yml  ci.yml  dependency-update.yml  quality-check.yml
.kiro/: README.md
.kiro/hooks/: ai-integration-validator.kiro.hook  business-logic-analyzer.kiro.hook
.kiro/settings/: mcp.json
.kiro/steering/: ai-service-temperature-update.md  code-generation-templates.md  deepseek-optimization-guide.md  deepseek-temperature-config.md  directory-structure-guidelines.md  education-system-standards.md  intelligent-agent-coding-guidelines.md  intelligent-agent-development-config.md  project-context.md  realtime-performance-testing.md  realtime-response-strategy.md  task-execution-standards.md
.opencode/: oh-my-opencode.jsonc
.sisyphus/common/: coding-best-practices.md  performance-guidelines.md  security-best-practices.md
.sisyphus/cpp/: cpp-rules.md
.sisyphus/go/: go-rules.md
.sisyphus/java/: java-rules.md
.sisyphus/python/: python-rules.md
.sisyphus/typescript/: typescript-rules.md
alembic/: env.py
alembic/versions/: 015_training_workshop_add_training_workshop_tables.py  016_intelligent_training_loop.py  017_add_class_student.py  018_add_competition_tables.py  0b145e45e096_merge_heads_add_listening_practice_.py  a494cbc08dd5_initial_migration_create_user_course_.py  add_listening_practice_tables.py  add_user_security_fields.py  edde780bb399_add_intelligent_training_loop_model_for_.py
app/: __init__.py  celery_worker.py  main.py
app/ai/: __init__.py
app/analytics/: __init__.py
app/backup/: __init__.py
app/core/: celery_app.py  celery_config.py  config.py  database.py  (+3 more)
config/: agent-config.json  agent-system.json  agent-templates.json
docs/: agent-template-system.md  code_duplication_refactoring_report.md  education_business_logic_analysis_report.md  enhanced_performance_monitoring_system.md  quality-check-fix.md  requirement_33_acceptance_report.md  多智能体协作.md
frontend/: .env.example  .eslintrc.cjs  ADMIN_FRONTEND_COMPLETION.md  CODE_QUALITY_AUDIT_REPORT.md  REQUIREMENT_11_IMPLEMENTATION_REPORT.md  REQUIREMENT_12_IMPLEMENTATION_REPORT.md  REQUIREMENT_13_IMPLEMENTATION_REPORT.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
nginx/: frontend.conf  nginx.conf
quality-reports/: eslint-report.txt  frontend-test-report.txt  mypy-report.txt  quality-report.json  quality-report.md  test-report.txt  typescript-report.txt
reports/: 学习进度报表_20250827_015305.json
scripts/: agent-executor.py  agent-registry.py  agent-scheduler.py  agent-templates.py  agent-wrapper.py  agent_system_integration_test_report.json  api-implementation-report.md  api-implementation.py  api-validator.py  check_dependencies.py  clean-ide-cache.sh  code_quality_report.py  code_review.py  configure-github-secrets.sh  create-github-repo.sh  cursor-docs-helper.js  demo_training_workshop_permissions.py  dev-startup-guide.sh  disable-deployment-workflows.sh  docker-build.sh  docker-deploy.sh  error_fix_report.md  github-auth-setup.sh  github-integration-status.sh  github-push-with-token.sh  github-upload-commands.sh  init_admin.py  install_dependencies.sh  multi_agent_test_report.md  priority-scheduler.py  quality-check-local.sh  quality_check.sh  quick_validate.py  setup-cursor-rules.sh  start-agent-system.py  start-celery-beat.sh  start-celery-flower.sh  start-celery-worker.sh  strict_validate.py  test-celery-tasks.py  (+21 more)
tests/: conftest.py  test_integration_precise_adaptive.py  test_precise_adaptive_algorithm.py
tools/: api_health_check.py
(+562 files in other folders)
