[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cet4-learning-system"
version = "1.0.0"
description = "英语四级学习及教学系统"
authors = [
    {name = "CET4 Learning Team", email = "team@cet4learning.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "httpx>=0.25.0",
    "aiofiles>=23.2.1",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

# 排除不需要检查的文件和目录
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
    "node_modules",
    "quality-reports",
    "*.json",
    "*.md",
    "*.yml",
    "*.yaml",
    "*.toml",
    "*.txt",
    "*.sh",
    ".env*",
    "Dockerfile*",
    ".github/CODEOWNERS",
]

[tool.ruff.format]
# 使用双引号而不是单引号
quote-style = "double"
# 缩进风格：空格
indent-style = "space"
# 跳过magic trailing comma
skip-magic-trailing-comma = false
# 行结束符
line-ending = "auto"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ANN", # flake8-annotations
]
ignore = [
    "E501",    # line too long, handled by formatter
    "B008",    # do not perform function calls in argument defaults
    "C901",    # too complex
    "ANN401",  # Dynamically typed expressions (Any) are disallowed
    "ANN101",  # Missing type annotation for `self` in method
    "ANN102",  # Missing type annotation for `cls` in classmethod
    "ANN204",  # Missing return type annotation for special method
    "I001",    # Import block needs sorting (let ruff handle this)
    "UP042",   # Use StrEnum instead of str + Enum (CI has older ruff)
]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = [
    "S101",    # Use of assert detected
    "T201",    # print found
    "G003",    # logging statement uses +
    "G004",    # logging statement uses f-string
    "PLR2004", # Magic value used in comparison
    "F841",    # Local variable assigned but never used
    "RUF001",  # String contains ambiguous characters
    "RUF002",  # Docstring contains ambiguous characters
    "RUF003",  # Comment contains ambiguous characters
    "ANN201",  # Missing return type annotation
    "PLC0415", # import should be at top level
    "E402",    # Module level import not at top of file
    "ANN",     # All flake8-annotations errors
]
"tests/*" = ["S101", "PLR2004", "F841", "ANN", "E402"]  # 测试文件允许assert和魔法数字
".github/scripts/*" = ["ALL"]
"tools/*" = ["ALL"]
"debug_*.py" = ["ALL"]
"run_*.py" = ["ALL"]
"app/training/services/listening_service.py" = ["F821", "ANN"]
"app/resources/models/social_models.py" = ["F811"]
"app/resources/services/permission_service.py" = ["E712"]
"app/shared/utils/minio_client.py" = ["F811"]
"app/training/services/question_batch_service.py" = ["E712"]
"app/users/services/token_blocklist_service.py" = ["UP007"]
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false  # 关闭装饰器类型检查，避免Celery等框架问题
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false  # 关闭未使用ignore警告，避免框架兼容性问题
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true

# 关闭一些严格检查来解决框架兼容性问题
disable_error_code = ["call-arg", "no-redef", "union-attr", "has-type", "dict-item", "no-untyped-def", "var-annotated", "name-defined", "misc", "override", "assignment", "no-any-return", "index", "type-arg", "operator", "no-untyped-call", "arg-type", "attr-defined", "unreachable"]

[[tool.mypy.overrides]]
module = ["scripts.*", "tests.*"]
ignore_errors = true

# Celery任务装饰器兼容性
[[tool.mypy.overrides]]
module = ["app.*.tasks.*", "app.shared.tasks.*"]
disable_error_code = ["call-arg", "no-redef", "union-attr", "has-type", "dict-item", "no-untyped-def", "var-annotated", "name-defined", "misc", "override"]
disallow_untyped_decorators = false

# SQLAlchemy模型兼容性
[[tool.mypy.overrides]]
module = ["app.*.models.*", "app.shared.models.*"]
disable_error_code = ["call-arg", "no-redef", "union-attr", "has-type", "dict-item", "no-untyped-def", "var-annotated", "name-defined", "misc", "override", "assignment", "no-any-return", "index", "type-arg", "operator", "no-untyped-call", "arg-type", "attr-defined", "unreachable"]

# 第三方库兼容性
[[tool.mypy.overrides]]
module = ["celery.*", "sqlalchemy.*", "alembic.*", "fastapi.*", "pydantic.*"]
ignore_missing_imports = true
disable_error_code = ["call-arg", "no-redef", "union-attr", "has-type", "dict-item", "no-untyped-def", "var-annotated", "name-defined", "misc"]

[tool.pyright]
# 禁用pyright类型检查 - 项目使用ruff和mypy作为代码质量工具
typeCheckingMode = "off"
reportMissingImports = false
reportMissingTypeStubs = false
reportGeneralTypeIssues = false
reportOptionalMemberAccess = false
reportOptionalSubscript = false
reportPrivateImportUsage = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip = [".git", ".venv", "venv", ".venv-*", "__pycache__", ".pytest_cache", ".mypy_cache", ".ruff_cache", "node_modules", "quality-reports"]
skip_glob = ["*.json", "*.md", "*.yml", "*.yaml", "*.toml", "*.txt", "*.sh", ".env*", "Dockerfile*"]